Fix broken hub icon animation on IE11

--- a/src/components/house/index.css
+++ b/src/components/house/index.css
@@ -1,5 +1,159 @@
 /** @define House */
 
+@keyframes Hub-animateHouse {
+  0% {
+    transform: scale(0.75);
+  }
+
+  85% {
+    transform: scale(0.75);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes Hub-animateHeater {
+  0% {
+    left: 40%;
+    opacity: 0;
+    top: 35%;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    left: -35%;
+    opacity: 1;
+    top: -10%;
+  }
+
+  100% {
+    left: -20%;
+    opacity: 1;
+    top: 0;
+  }
+}
+
+@keyframes Hub-animateMeteo {
+  0% {
+    left: 40%;
+    opacity: 0;
+    top: 35%;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    left: -60%;
+    opacity: 1;
+  }
+
+  100% {
+    left: -35%;
+    opacity: 1;
+    top: 30%;
+  }
+}
+
+@keyframes Hub-animateEye {
+  0% {
+    left: 40%;
+    opacity: 0;
+    top: 35%;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    left: 115%;
+    opacity: 1;
+    top: -10%;
+  }
+
+  100% {
+    left: 100%;
+    opacity: 1;
+    top: 0;
+  }
+}
+
+@keyframes Hub-animateBalace {
+  0% {
+    left: 40%;
+    opacity: 0;
+    top: 35%;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    left: 130%;
+  }
+
+  100% {
+    left: 115%;
+    opacity: 1;
+    top: 30%;
+  }
+}
+
+@keyframes Hub-animateLight {
+  0% {
+    left: 40%;
+    opacity: 0;
+    top: 35%;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    left: -30%;
+    opacity: 1;
+    top: 70%;
+  }
+
+  100% {
+    left: -20%;
+    opacity: 1;
+    top: 60%;
+  }
+}
+
+@keyframes Hub-animateVolet {
+  0% {
+    left: 40%;
+    opacity: 0;
+    top: 35%;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    left: 115%;
+    top: 70%;
+  }
+
+  100% {
+    left: 100%;
+    opacity: 1;
+    top: 60%;
+  }
+}
+
 .House {
   display: block;
   height: 100%;
@@ -45,7 +199,6 @@
     height: 60px;
     left: 50%;
     margin-left: -6px;
-    opacity: 0;
     position: absolute;
     top: 65%;
     transform-origin: center;
@@ -63,7 +216,6 @@
     height: 50px;
     left: 50%;
     margin-left: -25px;
-    opacity: 0;
     position: absolute;
     top: 76%;
     transform-origin: center;
@@ -72,20 +224,6 @@
 
     @nest .House:hover & {
       transform: scale(1.2);
-    }
-  }
-
-  @keyframes Hub-animateHouse {
-    0% {
-      transform: scale(0.75);
-    }
-
-    85% {
-      transform: scale(0.75);
-    }
-
-    100% {
-      transform: scale(1);
     }
   }
 
@@ -118,17 +256,16 @@
   }
 
   .House-icon {
-    animation-delay: 0.6s;
+    animation-delay: 0s;
     animation-direction: normal;
     animation-duration: 1s;
-    animation-fill-mode: forwards; /* or: backwards, both, none */
+    animation-fill-mode: none; /* or: backwards, both, none */
     animation-iteration-count: 1;
     animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     background: no-repeat center center;
     background-size: contain;
     height: 60px;
     left: 40%;
-    opacity: 0;
     position: absolute;
     top: 30%;
     transform: translate3d(0, 0, 0);
@@ -141,30 +278,6 @@
     }
   }
 
-  @keyframes Hub-animateHeater {
-    0% {
-      left: 40%;
-      opacity: 0;
-      top: 35%;
-    }
-
-    25% {
-      opacity: 1;
-    }
-
-    50% {
-      left: -35%;
-      opacity: 1;
-      top: -10%;
-    }
-
-    100% {
-      left: -20%;
-      opacity: 1;
-      top: 0;
-    }
-  }
-
   .House-icon--heater {
     background-image: svg-load(icon-heater.svg);
     transition-delay: 0.04s;
@@ -172,29 +285,9 @@
 
     @nest .is-animated & {
       animation-name: Hub-animateHeater;
-    }
-  }
-
-  @keyframes Hub-animateMeteo {
-    0% {
-      left: 40%;
-      opacity: 0;
-      top: 35%;
-    }
-
-    25% {
+      left: -20%;
       opacity: 1;
-    }
-
-    50% {
-      left: -60%;
-      opacity: 1;
-    }
-
-    100% {
-      left: -35%;
-      opacity: 1;
-      top: 30%;
+      top: 0;
     }
   }
 
@@ -204,30 +297,9 @@
 
     @nest .is-animated & {
       animation-name: Hub-animateMeteo;
-    }
-  }
-
-  @keyframes Hub-animateLight {
-    0% {
-      left: 40%;
-      opacity: 0;
-      top: 35%;
-    }
-
-    25% {
+      left: -35%;
       opacity: 1;
-    }
-
-    50% {
-      left: -30%;
-      opacity: 1;
-      top: 70%;
-    }
-
-    100% {
-      left: -20%;
-      opacity: 1;
-      top: 60%;
+      top: 30%;
     }
   }
 
@@ -238,30 +310,9 @@
 
     @nest .is-animated & {
       animation-name: Hub-animateLight;
-    }
-  }
-
-  @keyframes Hub-animateEye {
-    0% {
-      left: 40%;
-      opacity: 0;
-      top: 35%;
-    }
-
-    25% {
+      left: -20%;
       opacity: 1;
-    }
-
-    50% {
-      left: 115%;
-      opacity: 1;
-      top: -10%;
-    }
-
-    100% {
-      left: 100%;
-      opacity: 1;
-      top: 0;
+      top: 60%;
     }
   }
 
@@ -275,28 +326,9 @@
 
     @nest .is-animated & {
       animation-name: Hub-animateEye;
-    }
-  }
-
-  @keyframes Hub-animateBalace {
-    0% {
-      left: 40%;
-      opacity: 0;
-      top: 35%;
-    }
-
-    25% {
+      left: 100%;
       opacity: 1;
-    }
-
-    50% {
-      left: 130%;
-    }
-
-    100% {
-      left: 115%;
-      opacity: 1;
-      top: 30%;
+      top: 0;
     }
   }
 
@@ -311,29 +343,9 @@
 
     @nest .is-animated & {
       animation-name: Hub-animateBalace;
-    }
-  }
-
-  @keyframes Hub-animateVolet {
-    0% {
-      left: 40%;
-      opacity: 0;
-      top: 35%;
-    }
-
-    25% {
-      opacity: 1;
-    }
-
-    50% {
       left: 115%;
-      top: 70%;
-    }
-
-    100% {
-      left: 100%;
       opacity: 1;
-      top: 60%;
+      top: 30%;
     }
   }
 
@@ -347,6 +359,9 @@
 
     @nest .is-animated & {
       animation-name: Hub-animateVolet;
+      left: 100%;
+      opacity: 1;
+      top: 60%;
     }
   }
 }
